732 Add embedded code workflow deploy REST controller
