# server/ee/libs/embedded/embedded-configuration/embedded-configuration-public-rest/generated/src/main/java/com/bytechef/ee/embedded/configuration/public_/web/rest/IntegrationCodeWorkflowApi.java
@@ -1,0 +1,74 @@
+/*
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.22.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package com.bytechef.ee.embedded.configuration.public_.web.rest;
+
+import org.springframework.lang.Nullable;
+import io.swagger.v3.oas.annotations.ExternalDocumentation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import io.swagger.v3.oas.annotations.media.ExampleObject;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import jakarta.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2026-07-18T00:44:34.382124+02:00[Europe/Zagreb]", comments = "Generator version: 7.22.0")
+@Validated
+@Tag(name = "integration-code-workflow", description = "The Embedded Integration Code Workflow Public API")
+public interface IntegrationCodeWorkflowApi {
+
+    default Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    String PATH_DEPLOY_INTEGRATION = "/integrations/deploy";
+    /**
+     * POST /integrations/deploy : Deploy a new code based integration
+     * Deploy a new code based integration.
+     *
+     * @param integrationFile The file of a code-native integration. (optional)
+     * @return Successful operation. (status code 204)
+     */
+    @Operation(
+        operationId = "deployIntegration",
+        summary = "Deploy a new code based integration",
+        description = "Deploy a new code based integration.",
+        tags = { "integration-code-workflow" },
+        responses = {
+            @ApiResponse(responseCode = "204", description = "Successful operation.")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.POST,
+        value = IntegrationCodeWorkflowApi.PATH_DEPLOY_INTEGRATION,
+        consumes = { "multipart/form-data" }
+    )
+    default ResponseEntity<Void> deployIntegration(
+        @Parameter(name = "integrationFile", description = "The file of a code-native integration.") @RequestPart(value = "integrationFile", required = false) MultipartFile integrationFile
+    ) {
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+}
